This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.4 - not released yet
========================
+ MPCVideoDec: Add support for 4K for Intel HD Graphics 4000
* Updated FFmpeg (git fe79fc2)
* Updated Little CMS to v2.4 rc2 (git 14e1777)
* Updated SoundTouch to v1.7.0pre r150
* Remove .dat extention from the icon library and the formats
  (you can still associate it in the "Others" formats)
* Re-enable the embedded resources viewer in the properties dialog and improve
  its "open in brower" function (when double clicking on a resource)
! Web interface: Fix the "Deploy" feature
! Ticket #102, Fix playback of VideoCD as disk
! Ticket #2540, Fix handling of big API messages
! Ticket #2547, The master window handle was erroneously reset
  when starting a file from the explorer.
! Ticket #2452, Fix color controls in certain situations